--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -253,7 +253,6 @@ display:flex;
 
 
 .tag-container {
-  display: flex;
   flex-wrap: wrap;
   border: 1px solid #ccc;
   padding: 5px;
@@ -300,4 +299,5 @@ display:flex;
   flex: 1;
   padding: 5px;
   min-width: 50px;
+  width: 480px;
 }
