--- a/src/main/resources/templates/searchindex.html
+++ b/src/main/resources/templates/searchindex.html
@@ -34,6 +34,17 @@
         <span> · </span>
         <!-- 글 조회수 -->
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
+        <div class="detail_tag-container">
+            <ul id="tag-list" >
+
+                <li th:if="${article.tagConents != null}" th:each="tag : ${article.tagConents}">
+                    <a th:href="'/articles/search?tagsearch=true&query=' + ${tag}">
+                        <span th:text="'#' + ${tag}" class="tag-text"></span>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
     </div>
     <div th:unless="${hasResults}" class="article">
         <p>검색 결과가 없습니다.</p>
