--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -95,6 +95,11 @@
 
             function addTag(tag) {
               if (tag.trim() === '') return;
+              const sanitizedValue = tag.replace(/[^a-zA-Z0-9가-힣ㄱ-ㅎㅏ-ㅣ]/g, '');
+                 if(sanitizedValue != tag) {
+                 alert('특수문자는 허용 되지 않습니다.');
+                 return;
+                 }
                       const existingTags = tagList.querySelectorAll('.tag-text');
                       for (const tagText of existingTags) {
                         if (tagText.textContent === "#" + tag) {
