마이페이지 UI 제작

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -107,7 +107,7 @@
                         </a>
                         <div id="my_page" class="list-group" style="position:absolute; display:none;">
                             <ul>
-                                <a href="#" class="list-group-item list-group-item-action">
+                                <a href="/mypage?type=article_list" class="list-group-item list-group-item-action">
                                    마이페이지
                                 </a>
                                 <a href="/note" class="list-group-item list-group-item-action">
