--- a/src/main/resources/templates/authentication_fail.html
+++ b/src/main/resources/templates/authentication_fail.html
@@ -31,7 +31,7 @@
         <div class="card-body">
             <h5 class="card-title">인증에 실패했습니다.</h5>
             <p class="card-text">로그인 정보를 확인하고 다시 시도해주세요.</p>
-            <a href="/login" class="btn btn-primary">로그인 페이지로 돌아가기</a>
+            <a href="/" class="btn btn-primary">메인 페이지로 돌아가기</a>
         </div>
     </div>
 </div>
