--- a/src/main/resources/templates/authorization_fail.html
+++ b/src/main/resources/templates/authorization_fail.html
@@ -30,7 +30,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">허용되지 않은 접근 입니다.</h5>
-            <a href="/login" class="btn btn-primary">로그인 페이지로 돌아가기</a>
+            <a href="/" class="btn btn-primary">메인 페이지로 돌아가기</a>
         </div>
     </div>
 </div>
