--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -123,13 +123,13 @@
     <!-- 댓글 페이지 리스트 -->
     <div th:if="${endPage != 0}" class="paging_list">
         <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_previous" th:classappend=" ${!comment.hasPrevious()} ? 'disabled' " th:href="${!comment.isFirst()} ? @{/article/detail/{id}(id=${article.id},page=${comment.getPageable().getPageNumber()})}"> 이전 </a>
+        <a class="page_previous" th:classappend=" ${!comment.hasPrevious()} ? 'disabled' " th:href="${!comment.isFirst()} ? @{/article/detail/{id}(id=${article.id},page=${comment.number})}"> 이전 </a>
         <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
         <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
 		    <!-- 현재페이지는 링크 없이 숫자만 -->
-            <span th:if="${page == comment.getPageable().getPageNumber() + 1}" th:text="${page}"></span>
+            <span th:if="${page == comment.number + 1}" th:text="${page}"></span>
             <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-            <span th:unless="${page == comment.getPageable().getPageNumber() + 1}">
+            <span th:unless="${page == comment.number + 1}">
               <a th:href="@{/article/detail/{id}(id=${article.id},page=${page})}" th:text="${page}"></a>
             </span>
         </span>
