마이페이지 작성한 댓글 조회 UI 및 API 제작 내 정보 수정시 Authentication 정보 업데이트

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -103,7 +103,7 @@
                     <div th:if="${#authentication != null}">
                         <a href="javascript:;">
                         <span class="bold" id="usernick" th:if="${#authentication.principal.usernick != null}"
-                              th:text="${#authentication.principal.member.usernick}"></span>
+                              th:text="${#authentication.principal.usernick}"></span>
                         </a>
                         <div id="my_page" class="list-group" style="position:absolute; display:none;">
                             <ul>
