--- a/src/main/resources/templates/mypagecomment.html
+++ b/src/main/resources/templates/mypagecomment.html
@@ -20,6 +20,48 @@
                     <a class="nav-link" href="/mypage?type=edit_profile">내 정보 수정</a>
                 </li>
             </ul>
+         <table class="table table-border table-Light">
+             <COLGROUP>
+                 <col style="width:40%">
+                 <col style="width:40%">
+                 <col style="width:20%">
+             </COLGROUP>
+             <thead class="table-success">
+             <tr>
+                 <th scope="col" style="text-align: center;">글 제목</th>
+                 <th scope="col" style="text-align: center;">댓글 내용</th>
+                 <th scope="col" style="text-align: center;">작성 시간</th>
+             </tr>
+             </thead>
+             <tbody class="table-group-divider">
+             <tr class="border-bottom" th:each="item : ${comment}">
+                 <td style="text-align: center;">
+                     <a th:href="@{/article/detail/{id}(id=${item.article_id})}" th:text="${item.article_title}" />
+                 </td>
+                 <td style="text-align: center;">
+                     <a th:text="${item.content}" />
+                 </td>
+                 <td style="text-align: center;">
+                     <a th:text="${item.createdDate}" />
+                 </td>
+             </tr>
+             </tbody>
+         </table>
+         <div th:if="${endPage != 0}" class="paging_list">
+             <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
+             <a class="page_previous" th:classappend=" ${!comment.hasPrevious()} ? 'disabled' " th:href="${!comment.isFirst()} ? @{/mypage(type=comment_list,page=${comment.number})}"> 이전 </a>
+             <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
+             <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+		    <!-- 현재페이지는 링크 없이 숫자만 -->
+            <span th:if="${page == comment.number + 1}" th:text="${page}"></span>
+                 <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
+            <span th:unless="${page == comment.number + 1}">
+              <a th:href="@{/mypage(type=comment_list,page=${page})}" th:text="${page}"></a>
+            </span>
+        </span>
+             <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
+             <a class="page_next" th:classappend=" ${!comment.hasNext()} ? 'disabled' "  th:href="${comment.isLast()} ? '#' : @{/mypage(type=comment_list,page=${comment.number+2})}"> 다음 </a>
+         </div>
          
      </div>
     <script inline="javascript">
