--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -100,7 +100,7 @@
                                         　　, data: JSON.stringify({
                                                 block_type : 'temporary'
                                             })
-                                        　　, url: '/api/updateNoteBlock'
+                                        　　, url: '/api/NoteBlock/update'
                                         　　, success: function(data) {
                                               alert(data);
                                         　　}
@@ -120,7 +120,7 @@
                                         　　, data: JSON.stringify({
                                                 block_type : 'permanent'
                                             })
-                                        　　, url: '/api/updateNoteBlock'
+                                        　　, url: '/api/NoteBlock/update'
                                         　　, success: function(data) {
                                           alert(data);
                                         　　}
@@ -140,7 +140,7 @@
                                         　　, data: JSON.stringify({
                                                 block_type : 'remove_permanent'
                                             })
-                                        　　, url: '/api/updateNoteBlock'
+                                        　　, url: '/api/NoteBlock/update'
                                         　　, success: function(data) {
                                           alert(data);
                                         　　}
