--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -182,7 +182,7 @@
                         　　type:'delete'
                         　　, contentType:'application/json'
                         　　, data: JSON.stringify(obj)
-                        　　, url: '/article/delete/' + obj.id
+                        　　, url: '/api/article/delete/' + obj.id
                         　　, success: function(data) {
                                  modal.style.display = 'none';
                                  location.href='/';
@@ -205,7 +205,7 @@
                                 　　type:'post'
                                 　　, contentType:'application/json'
                                 　　, data: JSON.stringify(obj)
-                                　　, url: '/comment/write'
+                                　　, url: '/api/comment/write'
                                 　　, success: function(data) {
                                         window.location.href = '/article/detail/' + articleId;
                                 　　}
@@ -227,7 +227,7 @@
                         　　type:'delete'
                         　　, contentType:'application/json'
                         　　, data: JSON.stringify(obj)
-                        　　, url: '/comment/delete'
+                        　　, url: '/api/comment/delete'
                         　　, success: function(data) {
                                  window.location.href = '/article/detail/' + [[${article.id}]];
                         　　}
@@ -259,7 +259,7 @@
                             　　type:'post'
                             　　, contentType:'application/json'
                             　　, data: JSON.stringify(obj)
-                            　　, url: '/reply/write'
+                            　　, url: '/api/reply/write'
                             　　, success: function(data) {
                                     window.location.href = '/article/detail/' + [[${article.id}]];
                             　　}
