--- a/src/main/resources/templates/receivemessage.html
+++ b/src/main/resources/templates/receivemessage.html
@@ -49,7 +49,7 @@
                                         receiver_email : recipient,
                                         message : message
                                     })
-                                　　, url: '/api/SaveNote'
+                                　　, url: '/api/Note/save'
                                 　　, success: function(data) {
                                        alert(data);
                                        window.close();
