--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -189,7 +189,7 @@
              　   , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
                   , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
               　 　, data: formData
-             　  　, url: '/article/update'
+             　  　, url: '/api/article/update'
              　  　, success: function(data) {
                      if(data.message == "제목과 내용을 수정해주세요")
                      {
